# Enterprise_RAG_with_GCP

./: .dockerignore  .gitignore  pyproject.toml
app/: config.py  main.py
app/ingestion/: processor.py
app/ingestion/loaders/: office.py
app/services/retrieval/: qdrant_service.py
terraform/: cloud_run.tf  ingestion.tf  main.tf  terraform.tfvars.example
ui/: app.py
