[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloud-sql-python-connector>=1.20.2",
    "fastapi>=0.136.1",
    "flashrank>=0.2.10",
    "google-cloud-aiplatform>=1.151.0",
    "google-cloud-discoveryengine>=0.19.0",
    "google-cloud-documentai>=3.14.0",
    "google-cloud-storage>=3.10.1",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.8.3",
    "logfire[fastapi,requests]>=4.32.1",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "pg8000>=1.31.5",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.0.0",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "redisvl>=0.18.1",
    "requests>=2.34.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "unstructured>=0.21.5",
    "uvicorn[standard]>=0.46.0",
]
